corrected project name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "udacity-project-mars-dashboard",
+  "name": "udacity-mars-dashboard",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
