--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "concurrently --kill-others 'npm run dev:client' 'npm run dev:server'",
+    "start": "concurrently --kill-others 'npm run dev:client' 'npm run dev:server'",
     "dev:client": "parcel src/public/index.html",
     "dev:server": "nodemon src/server/server.js"
   },
@@ -36,11 +36,13 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "concurrently": "^6.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.7"
   },
   "browserslist": [
     "last 3 Chrome versions"
